syntax = "proto3";

package file_service;

option go_package = "./proto";

import "google/protobuf/timestamp.proto";

service FileService {
    rpc Upload(stream UploadRequest) returns (UploadResponse);
    rpc Download(DownloadRequest) returns (stream DownloadResponse);
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}

message UploadRequest {
    oneof data {
        FileInfo info = 1;
        bytes chunk = 2;
    }
}

message FileInfo {
    string filename = 1;
}

message UploadResponse {
    string message = 1;
}

message DownloadRequest {
    string filename = 1;
}

message DownloadResponse {
    bytes chunk = 1;
}

message FileMetadata {
    string filename = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
}

message ListFilesRequest {}

message ListFilesResponse {
    repeated FileMetadata files = 1;
}